[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
# aoc-client = "0.2.0"
# crossterm = "0.28.1"
# lazy_static = "1.5.0"
# ratatui = "0.29.0"
rayon = "1.10.0"
# tui-tree-widget = "0.23.0"
